@@ -8,15 +8,16 @@ Depends:
 Suggests:
     testthat
 Enhances: rkward
-Description: Provides functions to create plugin skeletons and XML structures
-    for RKWard.
+Description: Provides functions to create plugin skeletons and XML
+    structures for RKWard.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyLoad: yes
 URL: https://rkward.kde.org
-Authors@R: c(person(given="m.eik", family="michalke", email="meik.michalke@hhu.de", role=c("aut", "cre", "cph")))
+Authors@R: c(person(given="m.eik", family="michalke",
+        email="meik.michalke@hhu.de", role=c("aut", "cre", "cph")))
 Version: 0.08-2
-Date: 2015-12-17
+Date: 2016-01-13
 RoxygenNote: 5.0.1
 Collate:
     '00_class_01_rk.JS.arr.R'
