@@ -32,11 +32,14 @@
 #'    pasted as-is, after \code{require} has been evaluated.
 #' @param calculate A character string to be included in the \code{calculate()} function. This string will be
 #'    pasted as-is, after \code{variables} has been evaluated.
+#' @param doCalculate A character string to be included in the \code{doCalculate()} function. This string will be
+#'    pasted as-is. You don't need to define a \code{preview()} function, as this will be added automatically.
+#'    Use \code{js(if("full") ...)} style JavaScript code to include headers etc.
 #' @param printout A character string to be included in the \code{printout()} function. This string will be
 #'    pasted as-is, after \code{results.header} has been evaluated. Ignored if \code{doPrintout} is set.
 #' @param doPrintout A character string to be included in the \code{doPrintout()} function. This string will be
 #'    pasted as-is. You don't need to define a \code{preview()} function, as this will be added automatically.
-#'    Use \code{ite("full", ...)} style JavaScript code to include headers etc.
+#'    Use \code{js(if("full") ...)} style JavaScript code to include headers etc.
 #' @param load.silencer Either a character string (ID of probably a checkbox), or an object of class \code{XiMpLe.node}.
 #'    This defines a switch you can add to your plugin, to set the \code{require()} call inside \code{suppressMessages()},
 #'    hence suppressing all load messages (except for warnings and errors) of required packages in the output.
@@ -59,7 +62,7 @@
 #' @export
 
 rk.JS.doc <- function(require=c(), variables=NULL, globals=NULL, results.header=NULL, header.add=list(),
-  preprocess=NULL, calculate=NULL, printout=NULL, doPrintout=NULL, load.silencer=NULL, gen.info=TRUE, indent.by=rk.get.indent(),
+  preprocess=NULL, calculate=NULL, doCalculate=NULL, printout=NULL, doPrintout=NULL, load.silencer=NULL, gen.info=TRUE, indent.by=rk.get.indent(),
   guess.getter=FALSE){
   # variable to determine whether to add setGlobalVars() to preprocess() later
   addSetGlobalVars <- FALSE
@@ -136,6 +139,7 @@ rk.JS.doc <- function(require=c(), variables=NULL, globals=NULL, results.header=
     "}")
 
   js.calculate <- paste0("function calculate(){\n",
+    if(is.null(doCalculate)){
       # for plots we only need something here if calculate is not empty
       if(is.null(doPrintout) | !is.null(calculate)){paste0(
         ifelse(is.null(variables), "", paste0(
@@ -144,8 +148,16 @@ rk.JS.doc <- function(require=c(), variables=NULL, globals=NULL, results.header=
         ifelse(is.null(calculate),
           paste0(indent(2, by=indent.by), "// generate the R code to be evaluated here\n"),
           paste0(indent(2, by=indent.by), "// the R code to be evaluated\n",calculate, "\n")))
-      } else {}, "}")
-    
+      } else {}
+    } else {
+      rk.paste.JS(
+        "// all the real work is moved to a custom defined function doCalculate() below",
+        "// true in this case means: We want all the headers that should be printed in the output:",
+        "doCalculate(true);\n",
+      level=2, indent.by=indent.by)
+    },
+  "}")
+
   js.printout <- paste0("function printout(){\n",
       if(is.null(doPrintout)){
         paste0(
@@ -191,7 +203,34 @@ rk.JS.doc <- function(require=c(), variables=NULL, globals=NULL, results.header=
           "\n}")
   }
 
-  JS.doc <- paste(js.gen.info, js.globals, js.preprocess, js.calculate, js.printout, js.doPrintout, sep="\n\n")
+  # this part will create preview() and doCalculate(full), if needed
+  if(is.null(doCalculate)){
+    js.doCalculate <- ""
+  } else {
+    js.doCalculate <- paste0("function preview(){\n",
+          rk.paste.JS(
+            "preprocess();",
+            "calculate();",
+            "doCalculate(false);\n}",
+          level=2, indent.by=indent.by),
+          "\n\n",
+          "function doCalculate(full){\n",
+          ifelse(is.null(variables), "", paste0(
+            indent(2, by=indent.by), "// read in variables from dialog\n", 
+            trim.n(paste(variables, collapse="")), "\n\n")),
+          indent(2, by=indent.by), "// do the calculations\n",
+          if(is.character(results.header) && !identical(results.header, "")){
+            rk.paste.JS(ite("full", rk.JS.header(results.header, guess.getter=guess.getter, .add=header.add)))
+          } else {},
+          "\n\n",
+          doCalculate,
+          if(!is.null(calculate)){
+            paste0("\n\n", indent(2, by=indent.by), "// left over from the calculate function\n", calculate, "\n\n")
+          } else {},
+          "\n}")
+  }
+
+  JS.doc <- paste(js.gen.info, js.globals, js.preprocess, js.calculate, js.doCalculate, js.printout, js.doPrintout, sep="\n\n")
 
   return(JS.doc)
 }
