@@ -29,7 +29,8 @@ If not set,
 Not all options are supported because some don't make sense in this context. Valid options are:
 \code{"require"}, \code{"results.header"}, \code{"header.add"}, \code{"variables"},
       \code{"globals"}, \code{"preprocess"},
-\code{"calculate"}, \code{"printout"}, \code{"doPrintout"} and \code{"load.silencer"}.
+\code{"calculate"}, \code{"doCalculate"}, \code{"printout"},
+      \code{"doPrintout"} and \code{"load.silencer"}.
 If not set,
       their default values are used. See \code{\link[rkwarddev:rk.JS.doc]{rk.JS.doc}} for details.}
 
